--- a/realestate/package.json
+++ b/realestate/package.json
@@ -13,12 +13,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-transition-group": "^4.4.5",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
